# rollup-starter

./: Cargo.toml  GETTING_STARTED_WITH_CELESTIA.md  Makefile  README.md
.github/workflows/: reusable-job.yml  rust.yml
configs/celestia/: rollup.toml
configs/mock/: genesis.json  rollup-dockerized.toml  rollup.toml
crates/provers/risc0/guest-celestia/: Cargo.toml
crates/provers/risc0/guest-mock/: Cargo.toml
crates/provers/sp1/guest-celestia/: Cargo.toml
crates/provers/sp1/guest-mock/: Cargo.toml
crates/rollup/: Cargo.toml
crates/rollup/src/: rollup.rs
crates/rollup/tests/bank/: mod.rs
crates/stf/: Cargo.toml  build.rs
crates/stf/src/: delegation.rs  runtime.rs
crates/stf/stf-declaration/: Cargo.toml
crates/stf/stf-declaration/src/: lib.rs
integrations/: Makefile
scripts/soak-test/: Cargo.toml
scripts/soak-test/src/: evm.rs
signatures/version1/: cla.json
