[workspace]

resolver = "2"

members = [
  "crates/rollup",
  "crates/stf",
  "crates/stf/stf-declaration",
  "examples/value-setter",
  "scripts/soak-test",
]
default-members = ["crates/rollup"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Sovereign Permissionless Commercial License"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
publish = false
rust-version = "1.88"

[workspace.dependencies]
sov-address = { path = "../sovereign-sdk/crates/module-system/sov-address", default-features = false, features = [
  "evm",
] }
sov-accounts = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-accounts", default-features = false }
sov-api-spec = { path = "../sovereign-sdk/crates/full-node/sov-api-spec", default-features = false }
sov-attester-incentives = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-attester-incentives", default-features = false }
sov-chain-state = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-chain-state", default-features = false }
sov-bank = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-bank", default-features = false }
sov-blob-storage = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-blob-storage", default-features = false }
sov-paymaster = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-paymaster", default-features = false }
sov-capabilities = { path = "../sovereign-sdk/crates/module-system/sov-capabilities", default-features = false }
sov-celestia-adapter = { path = "../sovereign-sdk/crates/adapters/celestia", default-features = false }
sov-cli = { path = "../sovereign-sdk/crates/module-system/sov-cli", default-features = false }
sov-db = { path = "../sovereign-sdk/crates/full-node/sov-db", default-features = false }
sov-hyperlane-integration = { path = "../sovereign-sdk/crates/module-system/hyperlane", default-features = false, features = [
  "evm",
] }
sov-kernels = { path = "../sovereign-sdk/crates/module-system/sov-kernels", default-features = false }
sov-ledger-apis = { path = "../sovereign-sdk/crates/full-node/sov-ledger-apis", default-features = false }
sov-mock-da = { path = "../sovereign-sdk/crates/adapters/mock-da", default-features = false }
sov-mock-zkvm = { path = "../sovereign-sdk/crates/adapters/mock-zkvm", default-features = false }
sov-modules-api = { path = "../sovereign-sdk/crates/module-system/sov-modules-api", default-features = false }
sov-modules-rollup-blueprint = { path = "../sovereign-sdk/crates/module-system/sov-modules-rollup-blueprint", default-features = false }
sov-modules-stf-blueprint = { path = "../sovereign-sdk/crates/module-system/sov-modules-stf-blueprint", default-features = false }
sov-uniqueness = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-uniqueness", default-features = false }
sov-operator-incentives = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-operator-incentives", default-features = false }
sov-prover-incentives = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-prover-incentives", default-features = false }
sov-revenue-share = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-revenue-share", default-features = false }
sov-risc0-adapter = { path = "../sovereign-sdk/crates/adapters/risc0", default-features = false }
sov-sp1-adapter = { path = "../sovereign-sdk/crates/adapters/sp1", default-features = false }
sov-rollup-interface = { path = "../sovereign-sdk/crates/rollup-interface", default-features = false }
sov-sequencer = { path = "../sovereign-sdk/crates/full-node/sov-sequencer", default-features = false }
sov-sequencer-registry = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-sequencer-registry", default-features = false }
sov-soak-testing = { path = "../sovereign-sdk/examples/demo-rollup/sov-soak-testing", default-features = false }
sov-state = { path = "../sovereign-sdk/crates/module-system/sov-state", default-features = false }
sov-stf-runner = { path = "../sovereign-sdk/crates/full-node/sov-stf-runner", default-features = false }
sov-test-utils = { path = "../sovereign-sdk/crates/module-system/sov-test-utils", default-features = false }
sov-rollup-apis = { path = "../sovereign-sdk/crates/full-node/sov-rollup-apis", default-features = false }
sov-universal-wallet = { path = "../sovereign-sdk/crates/universal-wallet/schema", default-features = false }
sov-zkvm-utils = { path = "../sovereign-sdk/crates/utils/sov-zkvm-utils", default-features = false }
sov-evm = { path = "../sovereign-sdk/crates/module-system/module-implementations/sov-evm", default-features = false }
sov-ethereum = { path = "../sovereign-sdk/crates/full-node/sov-ethereum", default-features = false }
sov-build = { path = "../sovereign-sdk/crates/utils/sov-build", default-features = false }
stf-starter = { path = "./crates/stf", default-features = false }
sov-eth-dev-signer = { path = "../sovereign-sdk/crates/full-node/sov-eth-dev-signer" }
stf-starter-declaration = { path = "./crates/stf/stf-declaration", default-features = false }
value-setter = { path = "./examples/value-setter" }
strum = { version = "0.26.3", features = ["derive"] }

axum = { version = "0.7.9", default-features = false }
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0" }

prometheus_exporter = "0.8.5"
sha2 = { version = "0.10.6", default-features = false }

schemars = { version = "0.8.21", features = ["derive"] }
anyhow = { version = "1.0.95" }
clap = { version = "4.4.10", features = ["derive"] }
async-trait = "0.1.71"
borsh = { version = "1", features = ["rc", "bytes"] }
tracing = { version = "0.1.40", default-features = false }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
tempfile = "3.20"
jsonrpsee = { version = "0.25", features = ["jsonrpsee-types"] }

risc0-build = "2.1"
