[workspace]

resolver = "2"

members = [
  "crates/rollup",
  "crates/stf",
  "crates/stf/stf-declaration",
  "examples/value-setter",
  "scripts/soak-test",
]
default-members = ["crates/rollup"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Sovereign Permissionless Commercial License"
authors = ["Sovereign Labs <info@sovereign.xyz>"]
publish = false
rust-version = "1.88"

[workspace.dependencies]
sov-address = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false, features = [
  "evm",
] }
sov-accounts = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-api-spec = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-attester-incentives = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-chain-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-bank = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-blob-storage = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-paymaster = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-capabilities = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-celestia-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-cli = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-db = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-hyperlane-integration = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false, features = [
  "evm",
] }
sov-kernels = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-ledger-apis = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-mock-da = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-mock-zkvm = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-modules-api = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-modules-rollup-blueprint = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-modules-stf-blueprint = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-uniqueness = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-operator-incentives = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-prover-incentives = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-revenue-share = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-risc0-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-sp1-adapter = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-rollup-interface = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-sequencer = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-sequencer-registry = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-soak-testing = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-state = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-stf-runner = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-test-utils = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-rollup-apis = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-universal-wallet = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-zkvm-utils = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-evm = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-ethereum = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
sov-build = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740", default-features = false }
stf-starter = { path = "./crates/stf", default-features = false }
sov-eth-dev-signer = { git = "https://github.com/Sovereign-Labs/sovereign-sdk", rev = "e6596e81106b4e3e72e398203a39e58104a76740" }
stf-starter-declaration = { path = "./crates/stf/stf-declaration", default-features = false }
value-setter = { path = "./examples/value-setter" }
strum = { version = "0.26.3", features = ["derive"] }

axum = { version = "0.7.9", default-features = false }
serde = { version = "1.0.192", features = ["derive", "rc"] }
serde_json = { version = "1.0" }

prometheus_exporter = "0.8.5"
sha2 = { version = "0.10.6", default-features = false }

schemars = { version = "0.8.21", features = ["derive"] }
anyhow = { version = "1.0.95" }
hex = { version = "0.4.3" }
clap = { version = "4.4.10", features = ["derive"] }
async-trait = "0.1.71"
borsh = { version = "1", features = ["rc", "bytes"] }
tracing = { version = "0.1.40", default-features = false }
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
tempfile = "3.20"
jsonrpsee = { version = "0.25", features = ["jsonrpsee-types"] }

risc0-build = "2.1"
